--- a/src/public/popup/index.html
+++ b/src/public/popup/index.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+      body {
+        width: 600px;
+        min-height: 400px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
